--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,4 @@ dev-mode-dirs = ["components", "bases", "development", "."]
 [tool.polylinth.bricks]
 "bases/example/api_foo" = "example/api_foo"
 "components/example/log" = "example/log"
+"components/example/service_foo" = "example/service_foo"
