--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,8 @@ dev-mode-dirs = ["components", "bases", "development", "."]
 
 
 [tool.polylinth.bricks]
-"bases/example/api_foo" = "example/api_foo"
-"bases/example/api_bar" = "example/api_bar"
-"components/example/log" = "example/log"
-"components/example/service_foo" = "example/service_foo"
-"components/example/math_utils" = "example/math_utils"
+"bases/marvhus/api_foo" = "marvhus/api_foo"
+"bases/marvhus/api_bar" = "marvhus/api_bar"
+"components/marvhus/log" = "marvhus/log"
+"components/marvhus/service_foo" = "marvhus/service_foo"
+"components/marvhus/math_utils" = "marvhus/math_utils"
